Updated from https://github.com/clarin-eric/clarin-drupal-bootstrap-theme/commit/54cf78b Last commit message: Fix right float alignment

--- a/css/style.css
+++ b/css/style.css
@@ -9224,6 +9224,9 @@ img {
   .node--type-clarin-centre .field--name-field-address {
     margin-bottom: 5rem;
   }
+  .node--type-clarin-centre .field--name-field-description::after {
+    content: unset;
+  }
 }
 .field--name-field-tags {
   display: none;
